[FIX] Left-align topbar menu subitems.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@22269 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/strasa.css
+++ b/styles/strasa.css
@@ -804,6 +804,12 @@ a.phplmselected:hover {
 	color: #fff;
 }
 
+#tiki-top .cssmenu_horiz li ul li a,
+#tiki-top .cssmenu_horiz li ul li a:visited,
+#tiki-top .cssmenu_horiz li ul li a:hover {
+	text-align: left
+}
+
 #tiki-top .cssmenu_horiz li ul li a:hover {
 	background: none;	
 	border: 0;
